--- a/res/layout/player_row.xml
+++ b/res/layout/player_row.xml
@@ -8,18 +8,20 @@
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:stretchColumns="1"
-             android:padding="2dp">
+             android:padding="3dp">
     <TableRow>
         <TextView
                 android:id="@+id/playerLVLeftText"
                 android:layout_column="1"
                 android:layout_height="wrap_content"
+                android:textSize="12sp"
                 android:gravity="center_vertical"
                 />
         <TextView
                 android:id="@+id/playerLVRightText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textSize="12sp"
                 android:gravity="right"
                 />
     </TableRow>
