--- a/res/layout/player_param.xml
+++ b/res/layout/player_param.xml
@@ -10,7 +10,8 @@
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
-                  android:orientation="vertical">
+                  android:orientation="vertical"
+                  android:padding="2dp">
         <TextView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="3dp"
@@ -32,20 +33,20 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 android:text="Цвет игрока:"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="6dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
         <View
                 android:id="@+id/playerColorView"
                 android:background="#FFFFFF"
-                android:layout_width="fill_parent"
+                android:layout_width="100dp"
                 android:layout_height="20dp"
                 android:layout_marginTop="3dp"
                 android:padding="3dp"/>
         <Button android:text="Выбрать"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
+                android:layout_marginTop="6dp"
                 android:onClick="colorSelectionClick"/>
     </LinearLayout>
     <TableLayout
@@ -59,17 +60,12 @@
             <Button android:id="@+id/playerParamOk"
                     android:layout_column="1"
                     android:text="Сохранить"
-                    android:gravity="center_horizontal|center_vertical"/>
-            <Button android:id="@+id/playerParamDelete"
-                    android:text="Удалить"
-                    android:gravity="center_horizontal|center_vertical"/>
-        </TableRow>
-        <TableRow>
+                    android:gravity="center_horizontal|center_vertical"
+                    android:onClick="buttonClick"/>
             <Button android:id="@+id/playerParamCancel"
-                    android:layout_column="1"
-                    android:layout_span="2"
                     android:text="Отмена"
-                    android:gravity="center_horizontal|center_vertical"/>
+                    android:gravity="center_horizontal|center_vertical"
+                    android:onClick="buttonClick"/>
         </TableRow>
     </TableLayout>
 </RelativeLayout>
