--- a/res/layout/player_param.xml
+++ b/res/layout/player_param.xml
@@ -19,6 +19,7 @@
                   android:textStyle="bold"
                   android:text="@string/playerName"/>
         <EditText android:id="@+id/playerNameEdt"
+                  android:maxLength="15"
                   android:layout_marginTop="2dp"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
