--- a/res/layout/current_turn_row.xml
+++ b/res/layout/current_turn_row.xml
@@ -10,7 +10,7 @@
              android:stretchColumns="1">
     <TableRow>
         <TextView
-                android:id="@+id/turnsLVLeftText"
+                android:id="@+id/turnLVLeftText"
                 android:layout_column="1"
                 android:layout_height="wrap_content"
                 android:textSize="10sp"
@@ -18,7 +18,7 @@
                 android:gravity="center_vertical"
                 />
         <TextView
-                android:id="@+id/turnsLVRightText"
+                android:id="@+id/turnLVRightText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="10dp"
