--- a/res/layout/history.xml
+++ b/res/layout/history.xml
@@ -2,8 +2,15 @@
 <!--
   ~ Copyright (c) 2010. Сергей Лежнев
   -->
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-  android:id="@+id/textview"
-  android:layout_width="fill_parent"
-  android:layout_height="fill_parent"
-  android:text="История"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+    <ListView
+            android:id="@+id/android:list"
+            android:layout_marginTop="2dp"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:choiceMode="none"
+            android:longClickable="true"/>
+</RelativeLayout>
