--- a/res/layout/players.xml
+++ b/res/layout/players.xml
@@ -14,7 +14,7 @@
             android:layout_height="fill_parent"
             android:choiceMode="none"
             android:longClickable="true"/>
-    <LinearLayout
+    <!-- <LinearLayout
             android:background="@android:color/darker_gray"
             android:layout_alignParentBottom="true"
             android:layout_width="fill_parent"
@@ -25,6 +25,6 @@
                 android:layout_height="wrap_content"
                 android:text="Добавить игрока"
                 android:onClick="onClick"/>
-    </LinearLayout>
+    </LinearLayout> -->
 
 </RelativeLayout>
