--- a/res/layout/turn.xml
+++ b/res/layout/turn.xml
@@ -145,9 +145,8 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:typeface="normal"
-                    android:textStyle="bold"
                     android:textColor="#99FF99"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
                     android:text="-"/>
             <TextView
                     android:id="@+id/lastTurnCount"
@@ -157,15 +156,15 @@
                     android:typeface="serif"
                     android:textStyle="bold"
                     android:textColor="#99FF99"
-                    android:textSize="10sp"
+                    android:textSize="12sp"
                     android:text="-"/>
-            <Button android:id="@+id/lastTurnCancelBtn"
+            <!-- <Button android:id="@+id/lastTurnCancelBtn"
                     android:onClick="removeLastClickListener"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical|right"
                     android:textSize="8sp"
-                    android:text="Отменить"/>
+                    android:text="Отменить"/> -->
         </TableRow>
     </TableLayout>
     <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
