--- a/res/drawable/red_button_bgnd.xml
+++ b/res/drawable/red_button_bgnd.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2010. Сергей Лежнев
+  -->
+
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true"
           android:drawable="@drawable/red_button_pressed" /> <!-- pressed -->
