--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Copyright (c) 2010. Сергей Лежнев
+  -->
+
 <TabHost xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@android:id/tabhost"
     android:keepScreenOn="true"
